--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body class="Menu-body">
-    <div class="menu-overlay"></div>
+    <!-- <div class="menu-overlay"></div> -->
     <header id="menu-head">
       <sec class="box-1"></sec>
       <sec class="box-2">
@@ -42,7 +42,7 @@
             </svg>
             <span> SPECIALS </span>
           </div>
-          <span> "Enjoy yourself. It's later than you think." </span>
+          <span> "Enjoy yourself. It's better than you think." </span>
         </div>
         <div class="box-2-child2">
           <a href="#breakfast">Breakfast</a>
@@ -57,14 +57,14 @@
 
           <div class="scrollmenu">
             <a href="#breakfast">Breakfast</a>
-          <a href="#pasta">Pasta</a>
-          <a href="#pizza">Pizza</a>
-          <a href="#Main-dish">Main Course</a>
-          <a href="#soup">Soups</a>
-          <a href="#Salads">Salads</a>
-          <a href="#Appetizer">Appetizer</a>
-          <a href="#Desserts">Desserts</a>
-          <a href="">Drinks</a>
+            <a href="#pasta">Pasta</a>
+            <a href="#pizza">Pizza</a>
+            <a href="#Main-dish">Main Course</a>
+            <a href="#soup">Soups</a>
+            <a href="#Salads">Salads</a>
+            <a href="#Appetizer">Appetizer</a>
+            <a href="#Desserts">Desserts</a>
+            <a href="">Drinks</a>
             ...
           </div>
         </div>
@@ -130,10 +130,6 @@
             </div>
             <span class="item-price">£ 254.99</span>
           </div>
-          <div class="food-cat">
-            <span>Omlette</span>
-          </div>
-          <div class="gold-border"></div>
           <div class="item-container">
             <div class="food-wrap">
               <span>Smoked Turkey Benedict</span>
@@ -184,10 +180,6 @@
             </div>
             <span class="item-price">£ 199.99</span>
           </div>
-          <div class="food-cat">
-            <span>Sandwiches & Croissants</span>
-          </div>
-          <div class="gold-border"></div>
           <div class="item-container">
             <div class="food-wrap">
               <span>Mushroom Omelette</span>
@@ -248,6 +240,9 @@
             </div>
             <span class="item-price">£ 259.99</span>
           </div>
+        </div>
+        <div class="img-speration">
+
         </div>
         <div id="pasta">
           <div class="food-cat">
@@ -384,26 +379,7 @@
         </div>
         <div id="Main-dish">
           <div class="food-cat">
-            <span>BEEF DISHES</span>
-            <div>
-              <span>
-                Each dish is served with 2 of the following sides
-                <ul class="sides-ul">
-                  <li>Sautéed Vegetables</li>
-                  <li>Mashed Potatoes</li>
-                  <li>French Fries</li>
-                  <li>White Rice</li>
-                </ul>
-              </span>
-              <span>
-                Or 1 Choice of Pasta
-                <ul class="sides-ul-pasta">
-                  <li>Penna (White/Red/Pesto)</li>
-                  <li>Fettuccine (White/Red/Pesto)</li>
-                  <li>Spaghetti (White/Red/Pesto)</li>
-                </ul>
-              </span>
-            </div>
+            <span>MAIN DISHES</span>
           </div>
           <div class="gold-border"></div>
           <div class="item-container">
@@ -490,29 +466,6 @@
             </div>
             <span class="item-price">£ 384.99</span>
           </div>
-          <div class="food-cat">
-            <span>Chicken DISHES</span>
-            <div>
-              <span>
-                Each dish is served with 2 of the following sides
-                <ul class="sides-ul">
-                  <li>Sautéed Vegetables</li>
-                  <li>Mashed Potatoes</li>
-                  <li>French Fries</li>
-                  <li>White Rice</li>
-                </ul>
-              </span>
-              <span>
-                Or 1 Choice of Pasta
-                <ul class="sides-ul-pasta">
-                  <li>Penna (White/Red/Pesto)</li>
-                  <li>Fettuccine (White/Red/Pesto)</li>
-                  <li>Spaghetti (White/Red/Pesto)</li>
-                </ul>
-              </span>
-            </div>
-          </div>
-          <div class="gold-border"></div>
           <div class="item-container">
             <div class="food-wrap">
               <span>Creamy Garlic Roast</span>
@@ -591,6 +544,19 @@
               >
             </div>
             <span class="item-price">£ 389.99</span>
+          </div>
+          <div class="item-container">
+            <div class="food-wrap sides-wrapper">
+              <span>Your choice of sides</span>
+              <span class="food-desc"
+                >your choice of pasta or 2 sides&#92;Sautéed
+                Vegetables&#92;Mashed Potatoes&#92;French Fries&#92;White
+                Rice&#92;Or 1 Choice of Pasta&#92;Penna
+                (White&#92;Red&#92;Pesto)&#92;Fettuccine
+                (White&#92;Red&#92;Pesto)&#92;Spaghetti
+                (White&#92;Red&#92;Pesto)</span
+              >
+            </div>
           </div>
           <div class="food-cat">
             <span>SANDWICHES</span>
@@ -941,60 +907,60 @@
             <span class="item-price">£ 99.99</span>
           </div>
         </div>
-            <div class="food-cat">
-              <span>Extras &#38; Flavors</span>
-            </div>
-            <div class="gold-border"></div>
-            <div class="item-container">
-              <div class="food-wrap">
-                <span>Caramel</span>
-              </div>
-              <span class="item-price">£ 25</span>
-            </div>
-            <div class="item-container">
-              <div class="food-wrap">
-                <span>Pistachio</span>
-              </div>
-              <span class="item-price">£ 25</span>
-            </div>
-            <div class="item-container">
-              <div class="food-wrap">
-                <span>Lotus</span>
-              </div>
-              <span class="item-price">£ 25</span>
-            </div>
-            <div class="item-container">
-              <div class="food-wrap">
-                <span>Vanilla</span>
-              </div>
-              <span class="item-price">£ 25</span>
-            </div>
-            <div class="item-container">
-              <div class="food-wrap">
-                <span>Oreo</span>
-              </div>
-              <span class="item-price">£ 25</span>
-            </div>
-            <div class="item-container">
-              <div class="food-wrap">
-                <span>Nuts</span>
-              </div>
-              <span class="item-price">£ 30</span>
-            </div>
-            <div class="item-container">
-              <div class="food-wrap">
-                <span>Honey</span>
-              </div>
-              <span class="item-price">£ 30</span>
-            </div>
-            <div class="item-container">
-              <div class="food-wrap">
-                <span>Icecream</span>
-              </div>
-              <span class="item-price">£ 35</span>
-            </div>
+        <div class="food-cat">
+          <span>Extras &#38; Flavors</span>
+        </div>
+        <div class="gold-border"></div>
+        <div class="item-container">
+          <div class="food-wrap">
+            <span>Caramel</span>
           </div>
-      
+          <span class="item-price">£ 25</span>
+        </div>
+        <div class="item-container">
+          <div class="food-wrap">
+            <span>Pistachio</span>
+          </div>
+          <span class="item-price">£ 25</span>
+        </div>
+        <div class="item-container">
+          <div class="food-wrap">
+            <span>Lotus</span>
+          </div>
+          <span class="item-price">£ 25</span>
+        </div>
+        <div class="item-container">
+          <div class="food-wrap">
+            <span>Vanilla</span>
+          </div>
+          <span class="item-price">£ 25</span>
+        </div>
+        <div class="item-container">
+          <div class="food-wrap">
+            <span>Oreo</span>
+          </div>
+          <span class="item-price">£ 25</span>
+        </div>
+        <div class="item-container">
+          <div class="food-wrap">
+            <span>Nuts</span>
+          </div>
+          <span class="item-price">£ 30</span>
+        </div>
+        <div class="item-container">
+          <div class="food-wrap">
+            <span>Honey</span>
+          </div>
+          <span class="item-price">£ 30</span>
+        </div>
+        <div class="item-container">
+          <div class="food-wrap">
+            <span>Icecream</span>
+          </div>
+          <span class="item-price">£ 35</span>
+        </div>
+      </div>
+
       <div class="menu-col3"></div>
     </section>
 
