--- a/menu-ar.html
+++ b/menu-ar.html
@@ -54,6 +54,16 @@
           <a href="#Appetizer">المقبلات</a>
           <a href="#Desserts">الحلويات</a>
           <a href="">المشروبات</a>
+          <div class="dropdown">
+            <a href="#" class="dropbtn">
+              <i class="fa-solid fa-globe"></i> اللغة
+            </a>
+            <div class="dropdown-content">
+              <a href="menu.html">English</a>
+              <a href="menu-ar.html">العربية</a>
+            </div>
+          </div>
+          
 
           <div class="scrollmenu">
             <a href="#breakfast">الأفطار</a>
@@ -65,14 +75,19 @@
             <a href="#Appetizer">المقبلات</a>
             <a href="#Desserts">الحلويات</a>
             <a href="">المشروبات</a>
-            ...
+            <div class="dropdown lang-dropdown">
+              <a href="#" class="dropbtn">
+                <i class="fa-solid fa-globe"></i> اللغة
+              </a>
+              <div class="dropdown-content">
+                <a href="menu.html">English</a>
+                <a href="menu-ar.html">العربية</a>
+              </div>
+            </div>
           </div>
         </div>
       </sec>
       <sec class="box-3"></sec>
-      <!-- <sec class="box-4"></sec>
-    <sec class="box-5"></sec>
-    <sec class="box-6"></sec> -->
     </header>
     <section class="head-imgs">
       <div class="head-imgs1"></div>
