--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body class="Menu-body">
-    <!-- <div class="menu-overlay"></div> -->
+  
     <header id="menu-head">
       <sec class="box-1"></sec>
       <sec class="box-2">
@@ -54,6 +54,16 @@
           <a href="#Appetizer">Appetizer</a>
           <a href="#Desserts">Desserts</a>
           <a href="">Drinks</a>
+          <div class="dropdown">
+            <a href="#" class="dropbtn">
+              <i class="fa-solid fa-globe"></i> Language
+            </a>
+            <div class="dropdown-content">
+              <a href="menu.html">English</a>
+              <a href="menu-ar.html">العربية</a>
+            </div>
+          </div>
+          
 
           <div class="scrollmenu">
             <a href="#breakfast">Breakfast</a>
@@ -65,14 +75,19 @@
             <a href="#Appetizer">Appetizer</a>
             <a href="#Desserts">Desserts</a>
             <a href="">Drinks</a>
-            ...
+            <div class="dropdown lang-dropdown">
+              <a href="#" class="dropbtn">
+                <i class="fa-solid fa-globe"></i> Language
+              </a>
+              <div class="dropdown-content">
+                <a href="menu.html">English</a>
+                <a href="menu-ar.html">العربية</a>
+              </div>
+            </div>
           </div>
         </div>
       </sec>
       <sec class="box-3"></sec>
-      <!-- <sec class="box-4"></sec>
-    <sec class="box-5"></sec>
-    <sec class="box-6"></sec> -->
     </header>
     <section class="head-imgs">
       <div class="head-imgs1"></div>
